Added APC Proxy MockService and mocks configuration

--- a/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
@@ -4,5 +4,30 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "APCClientSettings": {
+    "APCAccessKey": "YourAPCAccessKey",
+    "APCAppId": "YourAPCAppId",
+    "APCBaseUri": "https://api.example.com/",
+    "Correlator": "OptionalCorrelator",
+    "IsMockEnabled": true
+  },
+  "APCMockSettings": {
+    "MockVerifyLocationResponse": {
+      "LastLocationTime": "2023-01-01T00:00:00Z",
+      "VerificationResult": true,
+      "MatchRate": 75
+    },
+    "MockLocationResponse": {
+      "LastLocationTime": "2023-01-01T00:00:00Z",
+      "LocationArea": {
+        "AreaType": "Circle",
+        "Circle": {
+          "Latitude": 39.4801,
+          "Longitude": -0.3634,
+          "Radius": 1000
+        }
+      }
+    }
   }
 }
