--- a/APC.Proxy.API/APC.ProxyServer/appsettings.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.json
@@ -7,9 +7,28 @@
   },
   "AllowedHosts": "*",
   "APCClientSettings": {
-    "APCAccessKey": "YourAPCAccessKey",
-    "APCAppId": "YourAPCAppId",
-    "APCBaseUri": "https://api.example.com/",
-    "Correlator": "OptionalCorrelator"
+    "APCAccessKey": "",
+    "APCAppId": "",
+    "APCBaseUri": "",
+    "Correlator": "",
+    "IsMockEnabled": false
+  },
+  "APCMockSettings": {
+    "MockVerifyLocationResponse": {
+      "LastLocationTime": "2023-01-01T00:00:00Z",
+      "VerificationResult": true,
+      "MatchRate": 75
+    },
+    "MockLocationResponse": {
+      "LastLocationTime": "2023-01-01T00:00:00Z",
+      "LocationArea": {
+        "AreaType": "Circle",
+        "Circle": {
+          "Latitude": 39.4801,
+          "Longitude": -0.3634,
+          "Radius": 1000
+        }
+      }
+    }
   }
 }
