--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -24,7 +24,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
