--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
+    "expo-location": "~16.1.0",
+    "expo-network": "~5.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "0.72.6",
     "react-native-paper": "^5.12.1",
     "react-native-safe-area-context": "4.6.3",
@@ -25,7 +29,7 @@
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "url": "^0.11.3",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "@react-native-community/netinfo": "9.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
