--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
@@ -24,8 +26,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "url": "^0.11.3",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
