Added apc number verification to APC Proxy

--- a/APC.Proxy.API/APC.ProxyServer/appsettings.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.json
@@ -28,6 +28,12 @@
           "Radius": 1000
         }
       }
+    },
+    "MockNumberVerificationMatchResponse": {
+      "DevicePhoneNumberVerified": true
+    },
+    "MockNumberRetrieveResponse": {
+      "DevicePhoneNumber": "+1234567890"
     }
   }
 }
