--- a/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
@@ -27,6 +27,12 @@
           "Radius": 1000
         }
       }
+    },
+    "MockNumberVerificationMatchResponse": {
+      "DevicePhoneNumberVerified": true
+    },
+    "MockNumberRetrieveResponse": {
+      "DevicePhoneNumber": "+1234567890"
     }
   }
 }
