--- a/APC.MobileApp/ReactNative/app.json
+++ b/APC.MobileApp/ReactNative/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "MSCORP_ACP_Demo",
-    "slug": "MSCORP_ACP_Demo",
+    "name": "MicrosoftAPCDemo",
+    "slug": "MicrosoftAPCDemo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.turingchallenge.MicrosoftAPCDemo"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d695a223-bfe6-47d7-99dd-5ab020065e57"
+      }
     }
   }
 }
