--- a/APC.MobileApp/ReactNative/app.json
+++ b/APC.MobileApp/ReactNative/app.json
@@ -4,7 +4,7 @@
     "slug": "MSCORP_ACP_Demo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -24,7 +24,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icons/favicon.png"
     }
   }
 }
