--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
@@ -24,13 +25,13 @@
     "react-hook-form": "^7.49.3",
     "react-native": "0.72.6",
     "react-native-paper": "^5.12.1",
+    "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "url": "^0.11.3",
-    "@react-native-picker/picker": "2.4.10"
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
