--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "url": "^0.11.3"
