--- a/APC.MobileApp/ReactNative/eas.json
+++ b/APC.MobileApp/ReactNative/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 7.0.0"
+    "version": ">= 7.1.2"
   },
   "build": {
     "development": {
@@ -13,12 +13,6 @@
     "production": {}
   },
   "submit": {
-    "production": {
-      "ios": {
-        "appleId": "jrbosch92@gmail.com",
-        "ascAppId": "6476621804",
-        "appleTeamId": "UMD9433CYS"
-      }
-    }
+    "production": {}
   }
 }
