--- a/APC.Proxy.API/APC.Client/APC.Client.csproj
+++ b/APC.Proxy.API/APC.Client/APC.Client.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.59.0" />
   </ItemGroup>
 
   <ItemGroup>
