--- a/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
@@ -5,34 +5,35 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "APCClientSettings": {
-    "APCAccessKey": "YourAPCAccessKey",
-    "APCAppId": "YourAPCAppId",
-    "APCBaseUri": "https://api.example.com/",
-    "IsMockEnabled": true
+    "AuthAppCredentials": {
+      "ClientId": "",
+      "TenantId": "",
+      "ClientSecret": ""
+    },
+    "GatewayId": "",
+    "BaseUri": "",
+    "IsMockEnabled": false
   },
-  "APCMockSettings": {
-    "MockVerifyLocationResponse": {
-      "LastLocationTime": "2023-01-01T00:00:00Z",
-      "VerificationResult": true,
-      "MatchRate": 75
+  "MockSettings": {
+    "MockDeviceLocationVerificationResult": {
+      "VerificationResult": false
     },
-    "MockLocationResponse": {
-      "LastLocationTime": "2023-01-01T00:00:00Z",
-      "LocationArea": {
-        "AreaType": "Circle",
-        "Circle": {
-          "Latitude": 39.4801,
-          "Longitude": -0.3634,
-          "Radius": 1000
-        }
-      }
+    "MockNetworkRetrievalResult": {
+      "NetworkCode": ""
     },
-    "MockNumberVerificationMatchResponse": {
-      "DevicePhoneNumberVerified": true
+    "MockNumberVerificationResult": {
+      "VerificationResult": false
     },
-    "MockNumberRetrieveResponse": {
-      "DevicePhoneNumber": "+1234567890"
+    "MockNumberRetrievalResult": {
+      "PhoneNumber": ""
+    },
+    "MockSimSwapRetrievalResult": {
+      "Date": ""
+    },
+    "MockSimSwapVerificationResult": {
+      "VerificationResult": false
     }
   }
 }
