--- a/APC.MobileApp/ReactNative/app.json
+++ b/APC.MobileApp/ReactNative/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Microsoft APC Demo",
     "slug": "MicrosoftAPCDemo",
-    "version": "1.1.1",
+    "version": "0.1.1",
     "orientation": "portrait",
     "icon": "./assets/icons/icon.png",
     "userInterfaceStyle": "light",
@@ -16,10 +16,11 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.turingchallenge.MicrosoftAPCDemo"
+      "bundleIdentifier": "com.turingchallenge.MicrosoftAPCDemo",
+      "buildNumber": "8"
     },
     "android": {
-      "versionCode": 4,
+      "versionCode": 8,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
         "backgroundColor": "#ffffff"
