--- a/APC.Proxy.API/APC.ProxyServer/appsettings.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.json
@@ -14,7 +14,8 @@
     },
     "GatewayId": "",
     "BaseUri": "",
-    "IsMockEnabled": false
+    "IsMockEnabled": false,
+    "RedirectUri": ""
   },
   "MockSettings": {
     "MockDeviceLocationVerificationResult": {
