--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react-native-vector-icons": "^6.4.18",
