--- a/APC.Proxy.API/APC.ProxyServer/appsettings.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.json
@@ -15,7 +15,7 @@
     "GatewayId": "",
     "BaseUri": "",
     "IsMockEnabled": false,
-    "RedirectUri": ""
+    "NumberVerificationRedirectUri": ""
   },
   "MockSettings": {
     "MockDeviceLocationVerificationResult": {
@@ -35,6 +35,9 @@
     },
     "MockSimSwapVerificationResult": {
       "VerificationResult": false
+    },
+    "MockNumberCallbackVerificationResult": {
+      "ApcCode": 1234
     }
   }
 }
