--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -22,10 +22,12 @@
     "expo-location": "~16.1.0",
     "expo-network": "~5.4.0",
     "expo-status-bar": "~1.6.0",
+    "i18n-iso-countries": "^7.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "0.72.10",
+    "react-native-country-codes-picker": "^2.3.5",
     "react-native-paper": "^5.12.1",
     "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "4.6.3",
