--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.5",
-    "expo": "^50.0.14",
+    "expo": "~50.0.15",
     "expo-clipboard": "~5.0.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.5",
