--- a/APC.MobileApp/ReactNative/package.json
+++ b/APC.MobileApp/ReactNative/package.json
@@ -6,8 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "openapigen": "npx @openapitools/openapi-generator-cli generate -i https://apc-proxy-prv-002.azurewebsites.net/swagger/v1/swagger.json -g typescript-axios -o ./app/api/generated"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
@@ -17,7 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.5",
-    "expo": "~50.0.15",
+    "expo": "~50.0.17",
     "expo-clipboard": "~5.0.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.5",
@@ -44,6 +43,7 @@
     "@openapitools/openapi-generator-cli": "^2.7.0",
     "@types/react": "~18.2.14",
     "@types/react-navigation": "^3.4.0",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.1.3"
   },
   "private": true
