--- a/APC.MobileApp/ReactNative/.env
+++ b/APC.MobileApp/ReactNative/.env
@@ -1,3 +1,3 @@
 API_URL= https://apc-proxy-prv-002.azurewebsites.net
 BING_URL = https://dev.virtualearth.net/REST/v1
-BING_KEY = 
+BING_KEY = YOUR-BING-API-KEY
