--- a/APC.Proxy.API/APC.Client/APC.Client.csproj
+++ b/APC.Proxy.API/APC.Client/APC.Client.csproj
@@ -7,13 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.11.3" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.59.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.61.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\APC.DataModel\APC.DataModel.csproj" />
+    <ProjectReference Include="..\Azure.Communication.ProgrammableConnectivity\Azure.Communication.ProgrammableConnectivity.csproj" />
   </ItemGroup>
 
 </Project>
