--- a/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
+++ b/APC.Proxy.API/APC.ProxyServer/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "APCImplementationType": "",
   "APCClientSettings": {
     "AuthAppCredentials": {
       "ClientId": "",
